helm/config/longhorn/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend
spec:
  rules:
    - host: storage.koudijs.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - secretName: storage-koudijs-lan
      hosts:
        - storage.koudijs.lan
